# curzor

./: CMakeLists.txt  README.md  main.cpp
src/modules/AllOperations/: Operation.hpp
src/modules/PieceTable/: AddTextPieceTable.hpp  DeleteTextPieceTable.hpp  DllPieces.hpp  PieceTable.hpp  Pieces.hpp
src/modules/TextBuffers/: TextBuffer.hpp
